# real

./: .gitignore  README  camera.cfg
sensor/: CMakeLists.txt
sensor-kinect/: .cproject  .project  CMakeLists.txt  cmake_install.cmake  freenect2Config.cmake  install_manifest.txt  main.cpp  pcl.cpp
sensor-kinect/include/processor/: PointCloudYarp  PointCloudYarp.h  processor.hpp
sensor-kinect/src/: opencl_depth_packet_processor.cpp  processor.cpp
viewer/: .cproject  .project  CMakeLists.txt  viewer.cpp
viewer/src/: brain.cpp  brain.hpp
