cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(REAL_SENSOR)
find_package(PCL 1.7 REQUIRED COMPONENTS common io visualization filters)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(real+sensor sensor.cpp)
target_link_libraries(real+sensor ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} pcl_filters pcl_visualization)
